# EasyPlugin

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.yml  license.txt
sce_sys/livearea/contents/: template.xml
src/: main.cpp  main.hpp  sqlite3.h
src/graphics/: 2dfont.cpp
src/net/: download.cpp  download.hpp
src/screens/: details.cpp  details.hpp  list.cpp  list.hpp  popup.cpp  popup.hpp  screen.cpp  screen.hpp  screens.cpp  screens.hpp  sidebar.cpp  sidebar.hpp
src/utils/: filesystem.cpp  filesystem.hpp  format.cpp  format.hpp  input.cpp  input.hpp  search.cpp  search.hpp
src/utils/lazy/: archive.c  archive.h  file.c  global_include.h  init.c  init.h  main.h  package_installer.c  package_installer.h  utils.c  utils.h  zip.h
src/utils/vhbb/: README.md  global_include.h  zip.cpp  zip.h
src/utils/vhbb/minizip/: crypt.h  ioapi.c  ioapi.h  unzip.c  unzip.h  zip.c  zip.h
src/utils/vpkInstaller/: archive.c  archive.h  base_head_bin.h  file.c  file.h  main.h  package_installer.c  sfo.c  sfo.h
